--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,16 @@
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
     "country-state-city": "^3.0.1",
+    "firebase": "^11.10.0",
     "overlay-navbar": "^1.0.4",
+    "razorpay": "^2.9.6",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.12.0",
     "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^2.3.1",
     "react-redux": "^7.2.4",
